# ClinDiary-Gemma4Good

./: .env.example  .gitignore  AGENTS.md  AI_BOOTSTRAP_NOTES.md  ClinDiary Bue Print.md  EMBEDDING_IMPLEMENTATION.md  HACKATHON_SUBMISSION_CHECKLIST.md  LICENSE  Makefile  README.md  README_INSTALL.txt  RELEASE_APK_GUIDE.md  REMAINING_WORK.md  THIRD_PARTY_NOTICES.md  build_demo_apk.ps1  build_demo_apk.sh  celerybeat-schedule  celerybeat-schedule.bak  celerybeat-schedule.dir  opencode.jsonc  skills-lock.json
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  ai_eval.py  ai_smoke.py  document_rag_smoke.py  main.py  notification_delivery_audit.py  notification_smoke.py  ocr_smoke.py  screening_links_audit.py  seed.py
apps/backend/tests/: conftest.py  test_ai_eval.py  test_ai_provider_capabilities.py  test_ai_smoke.py  test_ai_summary_provider.py  test_auth_api.py  test_billing_api.py  test_config.py  test_daily_entries_api.py  test_devices_api.py  test_document_parser.py  test_document_rag_provider.py  test_document_rag_smoke.py  test_documents_api.py  test_http_middleware.py  test_local_runtime_adapter.py  test_main_app.py  test_notification_delivery_audit.py  test_notification_delivery_service.py  test_notification_smoke.py  test_notifications_api.py  test_ocr_service.py  test_phase3_api.py  test_phase4_api.py  test_prevention_center_and_dossier_api.py  test_profile_api.py  test_red_flags_rule_engine.py  test_retention_service.py  test_screening_links_audit.py  test_wearables_api.py  (+1 more)
(+507 files in other folders)
