[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "clindiary-backend"
version = "0.1.0"
description = "ClinDiary FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ClinDiary" }]
dependencies = [
  "alembic>=1.16.0",
  "celery>=5.5.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "google-auth>=2.38.0",
  "httpx>=0.28.0",
  "minio>=7.2.18",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.9.0",
  "pydantic-settings>=2.10.0",
  "PyJWT>=2.10.0",
  "python-multipart>=0.0.20",
  "reportlab>=4.4.4",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.43",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
]
ocr = [
  "paddleocr>=2.8.1",
]

[project.scripts]
clindiary-api = "app.main:run"
clindiary-seed = "app.seed:main"
clindiary-worker = "app.workers.celery_app:worker_main"
clindiary-beat = "app.workers.celery_app:beat_main"
clindiary-ocr-smoke = "app.ocr_smoke:main"
clindiary-ai-smoke = "app.ai_smoke:main"
clindiary-ai-eval = "app.ai_eval:main"
clindiary-notification-smoke = "app.notification_smoke:main"
clindiary-notification-audit = "app.notification_delivery_audit:main"
clindiary-screening-links-audit = "app.screening_links_audit:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
